--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.3.0",
     "d3-dag": "^0.9.0",
     "delaunator": "^5.0.0",
+    "earcut": "^2.2.3",
     "events": "^3.3.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@types/d3": "^7.1.0",
     "@types/delaunator": "^5.0.0",
+    "@types/earcut": "^2.1.1",
     "@types/three": "^0.134.0",
     "@types/uuid": "^8.3.4"
   }
