--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "delaunator": "^5.0.0",
     "earcut": "^2.2.3",
     "events": "^3.3.0",
+    "fossil-delta": "^1.0.2",
     "node-sass": "^6.0.1",
+    "pixelmatch": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -56,6 +58,7 @@
     "@types/d3": "^7.1.0",
     "@types/delaunator": "^5.0.0",
     "@types/earcut": "^2.1.1",
+    "@types/pixelmatch": "^5.2.4",
     "@types/three": "^0.134.0",
     "@types/uuid": "^8.3.4"
   }
